fixed white space on the right of the whole page

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 /* div{
     border: 1px solid black;
 } */
+ body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
 
 /* .project-img:hover{
     background-color: orange;
